# audio-transcriber

./: .gitignore  CLAUDE.md  README.md  Tasks.md  config.toml  pyproject.toml
.claude/: settings.local.json
docs/: architecture.md  requirements.md
scripts/: watch.sh
src/audio_transcriber/: cli.py  config.py  polisher.py  storage.py  transcriber.py  utils.py
src/audio_transcriber/prompts/: polish_prompt.md
src/tool_audio/: cli.py  config.py  polisher.py  storage.py  transcriber.py  utils.py
src/tool_audio/prompts/: polish_prompt.md  polish_prompt1.md
tests/: test_cli.py  test_utils.py
