[project]
name = "audio-transcriber"
version = "0.1.0"
description = "CLI-инструмент для локальной транскрибации аудио/видео-файлов в текст"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "faster-whisper>=1.0",
    "typer>=0.12",
    "rich>=13.0",
]

[project.scripts]
transcribe = "audio_transcriber.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/audio_transcriber"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.0",
]
